--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,15 +1,26 @@
 .cart-dropdown {
-  position: absolute;
+  position: fixed;
   width: 240px;
-  height: 340px;
+  height: 350px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 5px 20px 20px;
   border: 1px solid black;
   background-color: white;
   top: 90px;
   right: 40px;
   z-index: 5;
+
+  .cart-x {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 18px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
 
   .cart-items {
     height: 240px;
