--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -6,6 +6,11 @@
   .title {
     font-size: 28px;
     margin-bottom: 25px;
+    text-decoration: none;
+
+    &:visited {
+      color: black;
+    }
   }
 
   .preview {
