Add hover state to collection titles and remove console.log from header

--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -7,9 +7,14 @@
     font-size: 28px;
     margin-bottom: 25px;
     text-decoration: none;
+    color: black;
 
     &:visited {
       color: black;
+    }
+
+    &:hover {
+      color: #525252;
     }
   }
 
